<?xml version="1.0"?>
<package format="2">
  <name>limo_base</name>
  <version>0.0.0</version>
  <description>ROS driver for limo</description>
  <maintainer email="ning.wang@agilex.ai">agilex</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
